<resources>
    <string name="app_name" translatable="false">MejorAppT</string>
    <string name="change_user_name">Change User Name</string>
    <string name="advices" translatable="false">Advices</string>
    <string name="information" translatable="false">Information</string>
    <string name="logo" translatable="false">logo</string>
    <string name="show_user_name" translatable="false">Show user name</string>
    <string name="show_actual_date" translatable="false">Show actual date</string>
    <string name="about_us" translatable="false">About us</string>
    <string name="complete_form">Take/Resume test</string>
    <string name="consult_previous_results">Consult Previous Results</string>
    <string-array name="test_items">
        <item>@string/fine</item>
        <item>@string/regular</item>
        <item>@string/tired</item>
        <item>@string/sad</item>
    </string-array>
    <string name="test">Test</string>
    <string name="Bienvenida">Bienvenido/a al test de salud mental.</string>
    <string name="sig">Siguiente pregunta</string>
    <string name="ant">Anterior pregunta</string>
    <string name="r0">0</string>
    <string name="r1">1</string>
    <string name="r2">2</string>
    <string name="r3">3</string>
    <string name="r4">4</string>
    <string name="r5">Siempre</string>
    <string name="How_are_you" translatable="false">How are you?</string>
    <string name="fine" translatable="false">Fine</string>
    <string name="regular" translatable="false">Regular</string>
    <string name="tired" translatable="false">Tired</string>
    <string name="sad" translatable="false">Sad</string>
    <string name="ok" translatable="false">OK</string>
    <string name="home" translatable="false">Home</string>
    <string name="username">Username</string>
    <string name="enter_the_new_username">Enter the new username</string>
    <string name="profile_icon" translatable="false">profile icon</string>
    <string name="c_mo_funciona">How it works?</string>
    <string name="background">background</string>
    <string name="introduction">We help you to analize, understand and improve in those aspects that procudes anxiety to you when you face an exam</string>
    <string name="test_appBar_title">Test</string>
    <string name="information_test_dialog">Information</string>
    <string name="title_top_appbar_user_guide">User Guide</string>
    <string name="test_how_it_works" translatable="false">Se presentaran cinco respuestas, del cero al cuatro, siendo:\n• Cero: nunca.\n• Uno: En pocas ocasiones.\n• Dos: Con cierta frecuencia.\n• Tres: A menudo.\n• Cuatro: Siempre.</string>
    <string name="usuarios">Usuarios</string>
    <string name="el_boton_esta_ubicado_en_la_esquina_superior_derecha_una_vez_seleccionada_esta_opcion_se_debera_introducir_los_datos_en_el_formulario_de_la_ventana_emergente_nombre_de_usuario_y_contrase_a_y_hacer_clic_en_conectarse">El boton esta ubicado en la [esquina superior derecha], una vez seleccionada esta opcion, se debera introducir los datos en el formulario de la ventana emergente: nombre de usuario y contraseña, y hacer clic en conectarse.</string>
    <string name="gender">gender</string>
    <string name="Age">Age</string>
    <string name="connectHeader">Conectarse o cambiar de usuario</string>
    <string name="infoUserButton">El boton esta ubicado en la [esquina superior derecha], una vez seleccionada esta opcion, se debera introducir los datos en el formulario de la ventana emergente: nombre de usuario y contraseña, y hacer clic en conectarse.</string>
    <string name="registerHeader">Registrar un nuevo usuario</string>
    <string name="registerInfo">En [la ventana de cambiar usuario, al final del formulario] estara ubicado el boton “Registrarse”, una vez hecho clic el formulario se adaptara para poder introducir los necesarios: nombre de usuario, contraseña, confirmar contraseña, [gmail]. Se debera hacer clic en confirmar y volvera a aparecer el formulario de conexión de usuario.</string>
    <string name="userInfoHeader">¿Cómo conozco la información relativa a mi usuario?</string>
    <string name="userInfoInfo">El nombre de usuario actual se mostrara en [la esquina inferior izquierda]</string>
    <string name="startText">Comenzar test</string>
    <string name="continueText">Reanudar test</string>
    <string name="beginTestHeader">Al hacer clic en este boton se empezara un test nuevo para el usuario, si el usuario ya empezo un test y decidio posponerlo, se retomara ese mismo test.\n[El test consiste en una serie de preguntas que apareceran de cinco en cinco, y una vez el usuario haya terminado esas preguntas prodra pulsar en siguiente ubicado en [la esquina inferio derecha] para pasar a las siguientes, se podra volver a las anteriores con el boton “Anterior”]\nSe presentaran cinco respuestas, del cero al cuatro, siendo:\n• Cero: nunca.\n• Uno: En pocas ocasiones.\n• Dos: Con cierta frecuencia.\n• Tres: A menudo.\n• Cuatro: Siempre.\nEl resultado se mostrara una vez terminado el test</string>
    <string name="previousResultHeader">Ver resultado anteriores</string>
    <string name="previousResultInfo">Se muestra los resultados de los test anteriores que ha realizado el usuario actual.</string>
    <string name="rdbHombre">Hombre</string>
    <string name="rdbMujer">Mujer</string>
    <string name="rdbNoBinario">No Binario\n</string>
</resources>