<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/baseline_person_24" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="text|textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/baseline_calendar_month_24" />

        <EditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:autofillHints=""
            android:hint="@string/Age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/profile_icon"
            android:src="@drawable/baseline_transgender_24" />

        <Spinner
            android:id="@+id/spiGeneros"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@array/test_items"/>

    </LinearLayout>

</LinearLayout>