<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_secondary_alt"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/introduction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/home"
                tools:ignore="VisualLintBounds" />

            <ImageView
                android:id="@+id/circular_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="-50dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="-50dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/circular_bg"
                tools:ignore="VisualLintBounds" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/lexend"
                android:onClick="btnUserGuideOnClick"
                android:text="@string/c_mo_funciona"
                app:icon="@drawable/baseline_info_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/introduction" />

            <Button
                android:id="@+id/btnPreviousResult"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:onClick="btnPreviousOnClick"
                android:text="@string/consult_previous_results"
                app:icon="?android:attr/actionModeFindDrawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnForm" />

            <Button
                android:id="@+id/btnForm"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend"
                android:onClick="btnTestOnClick"
                android:text="@string/complete_form"
                app:icon="?attr/actionModePasteDrawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:fontFamily="@font/lexend"
                android:text="@string/app_name"
                android:textColor="@color/md_theme_light_onPrimary_alt"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/circular_bg" />

            <TextView
                android:id="@+id/introduction"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend"
                android:text="@string/introduction"
                android:textAlignment="center"
                android:textColor="@color/md_theme_light_onPrimary_alt"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:elevation="10dp"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/optionsmenu"
            app:title=" " />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>